# ARIA_PRO

./: .dockerignore  .gitattributes  .gitignore  ARIA_DEPLOYMENT_INSTRUCTIONS.md  ARIA_SYSTEM_AUDIT_REPORT.md  CHANGELOG.md  CPP_INTEGRATION_README.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_MANAGEMENT_RULES.md  Dockerfile  Dockerfile.production  ENHANCED_FUSION_IMPLEMENTATION.md  FINAL_COMPREHENSIVE_TEST.py  GITHUB_SETUP_GUIDE.md  LOCAL_SETUP.md  MT5_TRADING_GUIDE.md  Modelfile  Modelfile.txt  PHASE_2_4_IMPLEMENTATION_SUMMARY.md  PHASE_2_TELEMETRY_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_MODEL_SETUP_COMPLETE.md  PORTS_AND_CONNECTIONS.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SECURITY_AUDIT.md  README.md  README_ARIA_MT5_PRODUCTION.md  README_HEDGE_FUND.md  README_LIVE_EXECUTION.md  README_PRODUCTION.md  SMC_ANALYSIS_GUIDE.md  SMC_EDGE_README.md  SYSTEM_TEST_REPORT.md  WEBSOCKET_README.md  aria_audit.py  aria_file_tree.txt  aria_mt5_dashboard.py  aria_mt5_launcher.py  aria_mt5_production_engine.py  (+85 more)
backend/: .dockerignore  .gitignore  Dockerfile  __init__.py  current_packages.txt  installed_packages.txt  integrate_ai.py  main.py  main_cpu.py  mt5.py  mt5_connector.py  production_config.py  production_requirements.txt  railway.toml  render.yaml  requirements.txt  requirements_complete.txt  requirements_lean.txt  risk_manager.py  signal_processor.py  start.sh  (+7 more)
cpp_core/: CMakeLists.txt  python_bindings.cpp
cpp_core/include/: market_data_processor.h  smc_engine.h
cpp_core/src/: market_data_processor.cpp  smc_engine.cpp
(+345 files in other folders)
